# openfiles

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  SECURITY.md  docker-compose.yml  main.py  requirements.txt  server_entry.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/api/: app.py
backend/chat/: engine.py  prompts.py
backend/cli/: main.py
backend/core/: config.py  cost_controller.py  database.py  indexing_service.py  llm_service.py
backend/parsers/: base.py  csv_parser.py  docx_parser.py  markdown_parser.py  pdf_parser.py  text_parser.py  xlsx_parser.py
backend/search/: search_service.py  vector_store.py
backend/watcher/: file_watcher.py
backend/web/: app.py
docs/: LAUNCH.md  LAUNCH_POSTS.md
docs/assets/: README.md
docs/legacy/: BGE嵌入模型指南.md  BGE集成说明.md  Kimi配置指南.md  Kimi集成说明.md  PRD_智能文件检索工具.md  test_bge.py  test_kimi.py  实现总结.md  快速开始.md  配置完成.md
frontend/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
src/api/: app.py
src/chat/: memory.py  prompts.py
src/cli/: main.py
src/core/: config.py  (+2 more)
tests/: conftest.py  test_api_security.py  test_chat_engine.py  test_parsers.py  test_search_service.py  test_vector_store.py
(+34 files in other folders)
